# ferrous

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  pyferret_quickstart.jnl  pyferret_quickstart.py  python_bindings.py  run_xarray.sh  xarray_quickstart.ipynb  xarray_quickstart.py
src/: cache.rs  cf_time.rs  cli.rs  commands.rs  coords.rs  dap2.rs  das.rs  error.rs  esgf.rs  http.rs  lib.rs  main.rs  nc_out.rs  opendap.rs  python.rs
