[package]
name = "ferrous"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["Tham Le <tham@kyber.media>"]
description = "Fast, ergonomic CMIP6 climate data access via OPeNDAP slicing and local caching"
repository = "https://github.com/tham-le/ferrous"
license = "MIT"
readme = "README.md"
keywords = ["cmip6", "climate", "netcdf", "opendap", "esgf"]
categories = ["command-line-utilities", "science"]

[lib]
name = "ferrous"
path = "src/lib.rs"

[[bin]]
name = "ferrous"
path = "src/main.rs"

[dependencies]

[dev-dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
