[package]
name = "ferrous"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["Tham Le <tham@kyber.media>"]
description = "Fast, ergonomic CMIP6 climate data access via OPeNDAP slicing and local caching"
repository = "https://github.com/tham-le/ferrous"
license = "MIT"
readme = "README.md"
keywords = ["cmip6", "climate", "netcdf", "opendap", "esgf"]
categories = ["command-line-utilities", "science"]

[lib]
name = "ferrous"
path = "src/lib.rs"

[[bin]]
name = "ferrous"
path = "src/main.rs"

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
