[package]
name = "ferrous"
version = "0.0.1"
edition = "2021"
rust-version = "1.86"
authors = ["Tham Le <tham@kyber.media>"]
description = "Fast, ergonomic CMIP6 climate data access via OPeNDAP slicing and local caching"
repository = "https://github.com/tham-le/ferrous"
license = "MIT"
readme = "README.md"
keywords = ["cmip6", "climate", "netcdf", "opendap", "esgf"]
categories = ["command-line-utilities", "science"]

[lib]
name = "ferrous"
path = "src/lib.rs"
# cdylib is needed so `maturin develop` can build a Python extension
# module. The cdylib build is otherwise harmless for non-Python users —
# cargo will just produce an unused libferrous.so alongside the rlib.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "ferrous"
path = "src/main.rs"

[features]
default = []
# Enable when building the Python wheel via `maturin develop --features
# python`. pyo3 is pulled in only here so `cargo build` stays independent
# of libpython.
python = ["dep:pyo3"]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
indicatif = "0.17"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
